--- a/Portfolio/netlify.toml
+++ b/Portfolio/netlify.toml
@@ -1,5 +1,5 @@
 [build]
   command = "npm run build"
   publish = "dist"
-  [context.production.environment]
-    NODE_VERSION = "18.x"
+  [build.environment]
+  NODE_VERSION = "20.13.1" 
